--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pens.lab.app.belajaractivity">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +14,7 @@
         <activity android:name=".modul.todolist.TodoListActivity" />
         <activity android:name=".modul.newtask.NewTaskActivity" />
         <activity android:name=".modul.edittask.EditTaskActivity" />
+        <activity android:name=".modul.register.RegisterActivity"/>
         <activity android:name=".modul.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
